fix text alignment

--- a/styles/land.css
+++ b/styles/land.css
@@ -91,7 +91,6 @@ main .card-img-top {
 }
 .card-text {
   font-size: 14px;
-  text-align: center;
 }
 
 .offer-block h1,
